# AgentBeats

./: .gitignore  Dockerfile  Makefile  README.md  agentbeats.config.json  categorized_output_final.json  env_runner2.py  main.py  pyproject.toml  run.sh  run_docker.sh  run_local.sh  sample.env  sample_eval_task.py  subset_20_homebench_4-3-1-1-1.jsonl  task_categorizer_mapping.md  task_categorizer_output_example.json  test_green_agent.py  test_green_agent_mcp.py  test_mcp_tools.py
.github/workflows/: test-and-publish.yml
data/: README.md  home_status_data.jsonl  home_status_method.jsonl  test_data.jsonl
examples/: README.md
green-agent/: CONTRIBUTING.md  Dockerfile  README.md
green-agent/src/: agent.py  executor.py  mcp_client.py  mcp_server.py  messenger.py  metrics_calculator.py  models.py  server.py
green-agent/tests/: conftest.py  test_agent.py
scenarios/smarthome/: run_scenario.py  scenario.toml
src/: launcher.py
src/green_agent/: Readme.md  SmartHome_green_agent.toml  SmartHome_green_agent_mcp.toml  __init__.py  agent.py  evaluator.py  mcp_client.py  mcp_server.py
src/green_agent/core/: categorizer.py  evaluation_results.json  evaluator.py  leaderboard.py  leaderboard_top10.json  manager2.py  metrics_calculator.py  smart_home_env_manager.py  task_loader.py
src/green_agent/core/models/: __init__.py  task_result.py
src/green_agent/mcp/: mcp_client.py  mcp_server.py  state.py
src/green_agent/mcp/models/: models.py
src/purple_agent/: __init__.py  agent.py  launcher.py  mcp_client.py  smarthome_purple_agent.toml
src/utils/: __init__.py  devices.py  homebench_devices.py  my_a2a.py  visual_home.py
src/white_agent/: agent.py  smarthome_white_agent.toml
submission/green-agent/: .gitignore  pyproject.toml
submission/green-agent/.github/workflows/: test-and-publish.yml
submission/green-agent/src/: messenger.py
submission_artifacts/: README.md
