[project]
name = "agentbeats"
version = "0.1.0"
description = "AgentBeats: A framework for building and evaluating agents"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "typer>=0.9.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "a2a-sdk>=0.3.17",
    "litellm>=1.0.0",
]

[project.scripts]
agentbeats = "main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "main.py"]
